# pdm-algo-demo

./: LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml
pdm-backend/: main.py  mlp_shift_model.pth  mlp_shift_scaler.pkl  predictions_every_window.csv  rul_model_500.pth  scaler_fd001.pkl
src/: App.jsx
src/components/: Footer.jsx  Header.jsx  Hero.jsx  PredictionForm.jsx  ShiftPredictionForm.jsx  ShiftRiskDashboard.jsx
