[project]
name = "pdm-algo-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "uvicorn>=0.34.2",
]
